# 2024-OpenHouse-toio

./: .gitattributes  .gitmodules  README.md  learn.ps1  pyproject.toml
2024-OpenHouse-toio/Assets/ML-Agents/Timers/: Soccer_timers.json
2024-OpenHouse-toio/Assets/OpenCV+Unity/: mcs.rsp
2024-OpenHouse-toio/Assets/OpenCV+Unity/Demo/Document_Scanner/: DocumentScannerLobby.unity  DocumentScannerLobbySettings.lighting  DocumentScannerScene.unity  DocumentScannerSceneSettings.lighting
2024-OpenHouse-toio/Assets/OpenCV+Unity/Demo/Face_Detector/: FaceDetectorScene.cs  FaceDetectorScene.unity  FaceDetectorSceneSettings.lighting
2024-OpenHouse-toio/Assets/OpenCV+Unity/Demo/Face_Recognizer/: FaceRecognizer.unity  FaceRecognizerSettings.lighting
2024-OpenHouse-toio/Assets/OpenCV+Unity/Demo/Grayscale/: GrayscaleScene.unity  GrayscaleSceneSettings.lighting
2024-OpenHouse-toio/Assets/OpenCV+Unity/Demo/Identifiy_Contours_by_Shape/: ContoursByShapeScene.unity  ContoursByShapeSceneSettings.lighting  ContoursByShapeScript.cs
2024-OpenHouse-toio/Assets/OpenCV+Unity/Demo/LiveSketch_WebCam/: LiveSketchScene.unity  LiveSketchSceneSettings.lighting
2024-OpenHouse-toio/Assets/OpenCV+Unity/Documentation/: OpenCV+Unity_Notes.txt  Third-Party Licenses.txt
2024-OpenHouse-toio/Assets/Soccer/Models/: Soccer-poca.onnx
2024-OpenHouse-toio/Assets/Soccer/Scenes/: Soccer.unity
2024-OpenHouse-toio/Assets/Soccer/Scripts/: AgentSoccer.cs
2024-OpenHouse-toio/ProjectSettings/: ProjectSettings.asset  TagManager.asset
src/_2024_openhouse_toio/: __init__.py
(+399 files in other folders)
