[project]
name = "2024-openhouse-toio"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tsyu12345", email = "syukut@gmail.com" }
]
dependencies = [
    "mlagents==0.27.0",
    "torch==1.7.1+cu110",
    "six>=1.16.0",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_openhouse_toio"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu110"
type = "index"
